--- a/eve-catalogue-gui/package.json
+++ b/eve-catalogue-gui/package.json
@@ -28,6 +28,7 @@
     "cytoscape-canvas": "^3.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "js-yaml": "^3.13.1",
     "jwt-decode": "^2.2.0",
     "mat-file-upload": "^1.3.2",
     "ngx-cytoscape": "^0.5.24",
@@ -36,7 +37,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.22",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "^8.3.22",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
