--- a/eve-catalogue-gui/package.json
+++ b/eve-catalogue-gui/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^8.2.14",
     "angular-in-memory-web-api": "^0.9.0",
     "angular-material-fileupload": "^2.0.0",
+    "@babel/compat-data": "7.8.0",
     "cytoscape": "^3.12.1",
     "cytoscape-canvas": "^3.0.1",
     "hammerjs": "^2.0.8",
