--- a/eve-catalogue-gui/package.json
+++ b/eve-catalogue-gui/package.json
@@ -25,6 +25,7 @@
     "@mdi/font": "^5.6.55",
     "@types/jwt-decode": "^2.2.1",
     "canvas": "^2.6.1",
+    "file-saver": "^2.0.2",
     "chokidar": "^3.4.0",
     "cors": "^2.8.5",
     "cytoscape": "^3.15.0",
