--- a/eve-catalogue-gui/angular.json
+++ b/eve-catalogue-gui/angular.json
@@ -31,7 +31,7 @@
             "scripts": [
               "node_modules/cytoscape/dist/cytoscape.min.js",
               "node_modules/jquery/dist/jquery.min.js"
-             
+
             ]
           },
           "configurations": {
@@ -92,7 +92,8 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/docs"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
