--- a/eve-catalogue-gui/package.json
+++ b/eve-catalogue-gui/package.json
@@ -34,6 +34,7 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "mat-select-autocomplete": "^1.3.0",
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^6.1.0",
     "ng-mocks": "^9.4.0",
